--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
+* {
+  box-sizing: border-box;
+  color: white;
+  font-family: monospace;
+}
+
 .App {
-  text-align: center;
+  background: #303030;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.container {
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.innerContainer {
+  width: 450px;
+  background-color: rgb(28, 28, 31);
+  box-shadow: 10px 0 40px 10px rgb(0, 0, 0);
+  border: 2px solid rgba(21, 104, 182, 0.623);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.resultScreen .result {
+  border-bottom: 2px solid rgba(21, 104, 182, 0.623);
+  padding-right: 10px;
+  padding-left: 10px;
+  outline: none;
+  height: 5vh;
+  font-size: 30px;
+  text-align: right;
+}
+
+.buttonContainer {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 15px;
+}
+
+button {
+  background: rgba(0, 0, 0, 0.4);
+  border: 1px solid black;
+  padding: 20px;
+  border-radius: 3px;
+  font-size: 30px;
+  box-shadow: 0 0 10px 0 rgb(131, 131, 131);
+  cursor: pointer;
+}
+
+button:hover {
+  background: rgb(22, 1, 1);
+}
+
+.clear {
+  background: #186864;
+}
+
+.clear:hover {
+  background: #012c2a;
+}
+
+.clearAll {
+  background: #ff0000;
+}
+
+.clearAll:hover {
+  background: #580000;
+}
+
+.equals {
+  background: #00c241;
+}
+
+.equals:hover {
+  background: #00571d;
+}
+
+.zero {
+  grid-column: span 2;
+}
+
+.plus {
+  grid-row: span 2;
 }
